<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cr7"
        android:contentDescription="TODO" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pesoenKg"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no|yes"
                android:inputType="text"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/estaturaenM"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtEstatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textAlignment="textEnd"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:autofillHints="" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/CalcularIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnCalcularIMCClick"
        android:text="@string/calcularIMC" />

    <Button
        android:id="@+id/AcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnAcercaDeClick"
        android:text="@string/acercaDe" />
</LinearLayout>